src/components/Molecules/Card/Card.css
/* Card styles are dictated by the parent Cards component. */
.card {
  border-radius: var(--border-radius);
  overflow: hidden;
  text-shadow: none;
}

.card .switcher {
  --measure: 100rem;
  gap: 0;
  width: 100%;
  height: 100%;
}

.card__media .frame {
  --frame-h: 16;
  --frame-v: 9;
}

.card__media .frame iframe {
  width: 100%;
  height: 100%;
}

.card__main.center {
  box-sizing: border-box;
}

/* Variants */

/* Card modifier class can be used on the .cards wrapper or on the card. */
/* So we use both types of selector orders for each variant. */
/* @todo: determine if we can omit the .card level and always expect the card modifier class on the .cards component. */

/* Backgrounds */
.card--bg-light {
  --bg-color: var(--color-light);
  --accent-color: var(--color-dark);
  --color: var(--color-dark);
}

.card--bg-dark {
  --bg-color: var(--color-dark);
  --accent-color: var(--color-accent);
  --color: var(--color-light);
}

.card--bg-base {
  --bg-color: var(--color-base);
  --accent-color: var(--color-dark);
  --color: var(--color-light);
}

.card--bg-secondary {
  --bg-color: var(--color-secondary);
  --accent-color: var(--color-accent);
  --color: var(--color-light);
}

.card--bg-accent {
  --bg-color: var(--color-accent);
  --accent-color: var(--color-secondary);
  --color: var(--color-dark);
}


/* Bordered Center */
.card--bordered .card,
.card--bordered-center,
.card.card--bordered,
.card.card--bordered--center {
  --color: var(--color-dark);
  --heading-color: var(--color);
  --button-bg: var(var(--button-bg), var(--color-background));
  --button-fg: var(var(--button-fg), var(--color))
  box-shadow: 2px 2px 12px rgba(100, 100, 100, .5);
  border: 2px solid var(--color-base);
  /* height: 100%; */
  background: var(--color-light);
  justify-content: flex-start;

}

.card .card__main {
  height: 100%;
}

.card--bordered-center .card__main {
  /* Because this is also wrapped in '.center' we can cause intrinsic center. */
  --align-items: center;
  text-align: center;
}

/* Media Left */
.card--media-left .switcher {
  --measure: 40rem;
  align-items: center;
}

/* Media Right */
.card--media-right .switcher {
  --measure: 40rem;
  align-items: center;
  flex-direction: row-reverse;
}

/* Overlay */
.card--overlay p,
.card--overlay h1,
.card--overlay h2,
.card--overlay h3,
.card--overlay h4,
.card--overlay a {
  text-shadow: 2px 2px 4px var(--bg-color),
    2px -2px 4px var(--bg-color),
    -2px 2px 4px var(--bg-color),
    -2px -2px 4px var(--bg-color);
}

.card--overlay .card,
.card.card--overlay {
  --heading-color: var(--color);
  border: 2px solid var(--color-dark);
}

.card--overlay .card > *,
.card.card--overlay > * {
  display: grid;
  grid-template-areas: "card";
  place-items: center;
  overflow: hidden;
  background-color: var(--bg-color);
}

.card--overlay .card > * > *,
.card.card--overlay > * > * {
  grid-area: card;
}

.card--overlay .card__main {
  gap: var(--s0);
}

.card--overlay .card__content {
  margin-block-start: auto;
}

.card__background {
  background-image: var(--background-image);
  background-position: center center;
  background-size: cover;
  height: 100%;
  width: 100%;
}

.card--overlay .card__tint {
  background-color: var(--bg-color);
  opacity: 0.8;
  width: 100%;
  height: 100%;
}

a.card--overlay {
  text-decoration: none
}

.card--overlay .card__main {
  z-index: 1;
  align-self: flex-start;
}

/* Icon */
.card--icon .card,
.card.card--icon {
  --heading-color: var(--heading-color, var(--color-light));
  --align-items: center;

  border: 2px solid var(--color-accent);
  gap: var(--s0);
  color: var(--color);
  display: flex;
  width: 100%;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
  background: var(--bg-color);
  padding: var(--s0) var(--s0);
  font-size: var(--s0);
  line-height: var(--s0);
  text-align: center;
  text-decoration: none;
  cursor: pointer;
}

.card--icon * {
  pointer-events: none;
}

.card--icon .card .box,
.card.card--icon .box {
  padding: 0;
}

.card--icon .icon {
  height: var(--s2);
  width: var(--s2);
  color: var(--heading-color);
}

.card--icon .stack {
  justify-content: center;
}

